- Get rid of meta slot in =vino-rating=.
- Get rid of inventory flow, which is going to be introduced as a plugin.

*Features*

- Introduce rating precision, controlled by =vino-rating-precision=. See its documentation for more information.
- Introduce =vino-entry-create-handle-functions= as an extension point for vino entry.
- Introduce =vino-rating-create-handle-functions= as an extension point for vino rating.
- New function - =vino-entry-insert=.
- Inventory management. See relevant section in readme.

** v0.3.1

*Features*

- [[https://github.com/d12frosted/vino/issues/55][vino#55]] Provide =vino-sources-fn= variable to allow completion of sources
  when acquiring a wine.
- [[https://github.com/d12frosted/vino/issues/64][vino#64]] Allow to provide extra meta when rating a wine.
- Allow to provide extra tags in all templates.

** v0.3.0

Primarily migration to =org-roam= v2 that has many improvements and breaking
changes. See [[https://org-roam.discourse.group/t/the-org-roam-v2-great-migration/1505][The Org-roam v2 Great Migration]] for more information on automatic
migration. There will be a separate script to migrate all =vino= entries.

*Features*

- Faster database updates via =vino-db-update-file=, which is called
  automatically on buffer save. Also, since =org-roam= has changed the way
  database is built, =vino= doesn't advice/hook into =org-roam= database build
  process, but instead provides a separate pipeline similar to one in
  =org-roam=. See relevant section of README for more information.

*Breaking changes*

- Since =org-roam= doesn't provide tagging functionality anymore, there is no
  built-in way to use directories as tags, so each file must contain a
  =#+filetags= value. Newly created notes will get this automatically, old notes
  must be migrated.
- Template system has adapted to latest =vulpea-create= and =org-roam=. Most
  importantly, instead of being a full blown template accepted by